<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_selector">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/s30dp"
        android:paddingLeft="@dimen/s40dp"
        android:paddingRight="@dimen/s40dp"
        android:paddingTop="@dimen/s30dp">

        <com.galaxy.s8.messagepro.messagergalaxys8.utils.CustomTextViewSanFranciscoBoldBlack
            android:id="@+id/customTextViewSanFranciscoBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/block_number"
            android:textColor="@color/colorTextBold"
            android:textSize="@dimen/s28sp"
            android:textStyle="bold" />

        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/s20dp"
            android:orientation="horizontal">

            <com.galaxy.s8.messagepro.messagergalaxys8.utils.CustomTextViewSanFranciscoMediumBlack
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/s10dp"
                android:text="@string/block_messenger"
                android:textColor="@color/colorTextBold"
                android:textSize="@dimen/s26sp" />

            <Switch
                android:id="@+id/sw_chanso"
                android:layout_width="match_parent"
                android:layout_height="@dimen/s20dp"
               android:gravity="right"
                android:checked="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/s20dp"
            android:gravity="right"
            android:orientation="horizontal">

            <com.galaxy.s8.messagepro.messagergalaxys8.utils.CustomTextViewSanFranciscoDisplayRegularBlack
                android:id="@+id/tv_huy"
                android:gravity="center"
                android:layout_width="@dimen/s100dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:background="@drawable/background_boder"
                android:padding="@dimen/s10dp"
                android:textColor="@color/color_theme"
                android:textSize="@dimen/s26sp" />

            <com.galaxy.s8.messagepro.messagergalaxys8.utils.CustomTextViewSanFranciscoDisplayRegularBlack
                android:id="@+id/tv_ok"
                android:layout_width="@dimen/s100dp"
                android:gravity="center"
                android:background="@drawable/background_boder"
                android:padding="@dimen/s10dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/s25dp"
                android:text="@string/ok"
                android:textColor="@color/color_theme"
                android:textSize="@dimen/s26sp" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>